--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   http: ^1.2.2
   speech_to_text: ^7.0.0
   flutter_tts: ^3.5.0
+  url_launcher: ^6.1.6
+  shared_preferences: ^2.0.11
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
